2010-10-30  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: add optional :TEST predicate to MT:EXEMPTION-WAIT
	* subr.d, subrkw.d (EXEMPTION-WAIT): accept optional :TEST argument
	* xthread.d (xcondition_wait): accept timeout as void pointer. with
	POSIX_THREADS it is absolute struct timespec, with WIN32_THREADS it is
	unsigned integer specifying milliseconds to wait
	* zthread.d (EXEMPTION-WAIT): loop until :TEST predicate is satisfied
	thus simplifies EXEMPTION-WAIT usage with POSIX_THREADS where spurious
	wakeups are possible
	(xcondition_wait): handle timeout parameter properly

2010-10-28  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (time_stamp): make "prefix" const to avoid
	warning: deprecated conversion from string constant to 'char*'
	* modules/syscalls/calls.c (POSIX:FILE-TREE-WALK): add a cast to
	fix g++ compilation

2010-10-27  Bruno Haible  <bruno@clisp.org>

	* clhs.lisp (*browsers*): Add :firefox-window and :firefox-tab.

2010-10-22  Vladimir Tzankov  <vtzankov@gmail.com>

	* time.d (get_running_times_helper): fix real time calculation. use
	the value returned from get_real_time()

2010-10-21  Sam Steingold  <sds@gnu.org>

	* time.d (GET-INTERNAL-RUN-TIME): when *ANSI*!=NIL, reject the
	optional argument (for strict ANSI compliance)

2010-10-21  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: provide real/run time information on individual threads
	when supported by OS
	* lispbibl.d: remove HAVE_RUN_TIME and dependencies
	(get_thread_run_time, get_run_time): obtain thread or process run time
	(struct clisp_thread_t): add thr_realstart_time - real time at which
	thread has started
	(check_thread): make it global (used from time.d)
	* spvw_gcstat.d (gc_timer_on, gc_timer_off): use get_run_time()
	instead	of get_running_time() (which was causing unused C stack
	area to be overwritten)
	* stream.d: remove run_time_start()and run_time_restart() calls (anyway
	these were nop when HAVE_RUN_TIME was not defined i.e. always)