@@ -1,3 +1,8 @@
+2010-11-08  Sam Steingold  <sds@gnu.org>
+
+	* modules/rawsock/rawsock.c (check_sockopt_name): add
+	(get_sock_opt, set_sock_opt): use it instead of NOTREACHED
+
 2010-10-30  Vladimir Tzankov  <vtzankov@gmail.com>
 
 	[MULTITHREAD]: add optional :TEST predicate to MT:EXEMPTION-WAIT
